[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/hud/Menu_Button_RED.png" type="Texture" id=1]
[ext_resource path="res://assets/sfx/ui/Button_Hover.ogg" type="AudioStream" id=2]
[ext_resource path="res://utils/Button.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/ui/Button_Select.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/hud/Menu_Button_PLAY_active.png" type="Texture" id=5]
[ext_resource path="res://assets/hud/Menu_Button_PLAY_inactive.png" type="Texture" id=6]

[node name="Play" type="TextureButton"]
margin_right = 138.0
margin_bottom = 54.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
normal_texture = ExtResource( 6 )
hover_texture = ExtResource( 5 )

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Press" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 160, 56 )
texture = ExtResource( 5 )
[connection signal="focus_entered" from="." to="." method="_on_Play_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_Play_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Play_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Play_pressed"]
